--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
             /* Firefox 스크롤바 숨기기 */
             -ms-overflow-style: none;
             /* IE 스크롤바 숨기기 */
+            overflow-y: auto;
+            scroll-behavior: smooth;
+            /* 부드러운 스크롤 */
+
+
         }
 
         #autocompleteList::-webkit-scrollbar {
@@ -270,6 +275,113 @@
             margin-left: 8px;
             cursor: pointer;
         }
+
+        /* 모달 스타일 */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1001;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            max-width: 90%;
+            width: 90%;
+            /* 모달 너비를 동적으로 설정 */
+            height: auto;
+            margin: 5% auto;
+        }
+
+        #teamTable {
+            width: 100%;
+            /* 테이블 크기를 모달에 맞게 조정 */
+            max-width: 100%;
+            table-layout: fixed;
+            /* 셀 크기를 균등하게 유지 */
+            word-wrap: break-word;
+            /* 긴 텍스트 자동 줄바꿈 */
+        }
+
+        #teamTable th,
+        #teamTable td {
+            padding: 10px;
+            text-align: center;
+            border: 1px solid #333;
+            color: #E0E0E0;
+            overflow: hidden;
+            /* 넘치는 텍스트를 숨김 */
+            text-overflow: ellipsis;
+            /* 넘치는 텍스트를 줄임표로 표시 */
+            white-space: nowrap;
+            /* 줄바꿈 방지 */
+        }
+
+        #teamTable th {
+            background-color: #333;
+            color: #BB86FC;
+        }
+
+        .close {
+            color: #E0E0E0;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #BB86FC;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* 모달 버튼 스타일 */
+        .modal-button {
+            padding: 10px 20px;
+            margin-left: 10px;
+            font-size: 14px;
+            background-color: #BB86FC;
+            color: #121212;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .modal-button:hover {
+            background-color: #9E6CE0;
+        }
+
+        .win-rate-bar {
+            display: flex;
+            height: 20px;
+            width: 100%;
+            background-color: #333;
+            border-radius: 5px;
+            overflow: hidden;
+            margin-top: 10px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        .phantom-bar {
+            height: 100%;
+            background-color: #00BFFF;
+            /* 팬텀팀 파란색 */
+            transition: width 0.3s ease;
+        }
+
+        .ghost-bar {
+            height: 100%;
+            background-color: #ff7300;
+            /* 고스트팀 주황색 */
+            transition: width 0.3s ease;
+        }
     </style>
 </head>
 
@@ -279,6 +391,7 @@
         <div class="search-container">
             <input type="text" id="searchBox" placeholder="Search user..." autocomplete="off">
             <div id="autocompleteList" class="dropdown"></div>
+            <button id="openModalButton" class="modal-button">Team</button>
         </div>
         <div id="filterTags" class="tag-container">
             <!-- 선택된 유저 태그가 추가됩니다 -->
@@ -301,6 +414,34 @@
                     <!-- Leaderboard rows will be dynamically generated -->
                 </tbody>
             </table>
+        </div>
+    </div>
+
+    <div id="customModal" class="modal">
+        <div class="modal-content">
+            <span id="closeModalButton" class="close">&times;</span>
+            <table id="teamTable">
+                <thead>
+                    <tr>
+                        <th>Phantom</th>
+                        <th>KDR</th>
+                        <th>KPR</th>
+                        <th>ELO</th>
+                        <th>Ghost</th>
+                        <th>KDR</th>
+                        <th>KPR</th>
+                        <th>ELO</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- 팀 구성 결과가 동적으로 추가됩니다 -->
+                </tbody>
+            </table>
+            <p id="winRateText"></p>
+            <div id="winRateBar" class="win-rate-bar">
+                <div id="phantomBar" class="phantom-bar"></div>
+                <div id="ghostBar" class="ghost-bar"></div>
+            </div>
         </div>
     </div>
 
@@ -332,6 +473,115 @@
                 updateLeaderboardWithEloAndTier(leaderboard);
             })
             .catch(error => console.error("Error loading lboard.csv:", error));
+
+
+        // 모달 요소 가져오기
+        const openModalButton = document.getElementById("openModalButton");
+        const closeModalButton = document.getElementById("closeModalButton");
+        const modal = document.getElementById("customModal");
+
+        // 모달 닫기 버튼 클릭 시
+        closeModalButton.addEventListener("click", () => {
+            modal.style.display = "none"; // 모달 숨기기
+        });
+
+        // 모달 외부를 클릭하면 모달 닫기
+        window.addEventListener("click", (event) => {
+            if (event.target === modal) {
+                modal.style.display = "none"; // 모달 숨기기
+            }
+        });
+
+        // 모달 열기
+        openModalButton.addEventListener("click", () => {
+            if (selectedUsers.size < 2) {
+                alert("At least two users are required to create teams.");
+                return;
+            }
+
+            const filteredPlayers = leaderboardData.filter(player =>
+                selectedUsers.has(player.nickname)
+            );
+
+            const teams = assignTeams(filteredPlayers);
+            displayTeams(teams);
+            modal.style.display = "block"; // 모달 표시
+        });
+
+        // 팀 나누기 함수 (ELO 기준으로 균등 배분)
+        function assignTeams(players) {
+            players.sort((a, b) => b.elo - a.elo); // ELO 높은 순으로 정렬
+
+            const phantom = [];
+            const ghost = [];
+            let phantomElo = 0;
+            let ghostElo = 0;
+
+            players.forEach(player => {
+                if (phantomElo <= ghostElo) {
+                    phantom.push(player);
+                    phantomElo += player.elo;
+                } else {
+                    ghost.push(player);
+                    ghostElo += player.elo;
+                }
+            });
+
+            return { phantom, ghost };
+        }
+
+        // 예상 승률 계산 함수
+        function calculateWinRate(phantomElo, ghostElo) {
+            const totalElo = phantomElo + ghostElo;
+            return {
+                phantomWinRate: ((phantomElo / totalElo) * 100).toFixed(1) + "%",
+                ghostWinRate: ((ghostElo / totalElo) * 100).toFixed(1) + "%"
+            };
+        }
+
+        // 팀 구성 결과를 테이블에 표시
+        function displayTeams({ phantom, ghost }) {
+            const teamTable = document.querySelector("#teamTable tbody");
+            const winRateElement = document.getElementById("winRateText");
+
+            teamTable.innerHTML = ""; // 기존 테이블 데이터 초기화
+
+            const maxRows = Math.max(phantom.length, ghost.length);
+            let phantomElo = 0;
+            let ghostElo = 0;
+
+            for (let i = 0; i < maxRows; i++) {
+                const phantomPlayer = phantom[i] || {};
+                const ghostPlayer = ghost[i] || {};
+
+                phantomElo += phantomPlayer.elo || 0;
+                ghostElo += ghostPlayer.elo || 0;
+
+                const row = document.createElement("tr");
+                row.innerHTML = `
+            <td>${phantomPlayer.nickname || ""}</td>
+            <td>${(phantomPlayer.kills / Math.max(1, phantomPlayer.deaths)).toFixed(2) || ""}</td>
+            <td>${(phantomPlayer.kills / phantomPlayer.matches).toFixed(1) || ""}</td>
+            <td>${phantomPlayer.elo || ""}</td>
+            <td>${ghostPlayer.nickname || ""}</td>
+            <td>${(ghostPlayer.kills / Math.max(1, ghostPlayer.deaths)).toFixed(2) || ""}</td>
+            <td>${(ghostPlayer.kills / ghostPlayer.matches).toFixed(1) || ""}</td>
+            <td>${ghostPlayer.elo || ""}</td>
+        `;
+                teamTable.appendChild(row);
+            }
+
+            // 예상 승률 계산
+            const { phantomWinRate, ghostWinRate } = calculateWinRate(phantomElo, ghostElo);
+            winRateElement.textContent = `예측 승률: Phantom (${phantomWinRate}) vs Ghost (${ghostWinRate})`;
+
+            // 승률 바 업데이트
+            const phantomBar = document.getElementById("phantomBar");
+            const ghostBar = document.getElementById("ghostBar");
+
+            phantomBar.style.width = `${parseFloat(phantomWinRate)}%`;
+            ghostBar.style.width = `${parseFloat(ghostWinRate)}%`;
+        }
 
         let selectedUsers = new Set(); // 선택된 유저 저장
 
@@ -368,6 +618,88 @@
             }
         });
 
+
+        let currentAutocompleteIndex = -1; // 현재 선택된 추천 항목의 인덱스
+
+        document.getElementById("searchBox").addEventListener("keydown", function (e) {
+            const autocompleteList = document.getElementById("autocompleteList");
+            const items = autocompleteList.querySelectorAll("div");
+
+            if (items.length === 1 && e.key === "Enter") {
+                e.preventDefault(); // 기본 Enter 동작 막기
+
+                // 결과가 하나뿐이면 바로 추가
+                const selectedItem = items[0];
+                addFilterTag(selectedItem.textContent);
+                autocompleteList.style.display = "none"; // 추천 리스트 숨기기
+                this.value = ""; // 검색창 초기화
+                return;
+            }
+
+            if (items.length > 0) {
+                if (e.key === "Tab") {
+                    e.preventDefault(); // 기본 Tab 동작 막기
+
+                    // 다음 항목으로 이동
+                    currentAutocompleteIndex = (currentAutocompleteIndex + 1) % items.length;
+
+                    // 스타일 업데이트
+                    items.forEach((item, index) => {
+                        if (index === currentAutocompleteIndex) {
+                            item.style.backgroundColor = "#BB86FC";
+                            item.style.color = "#121212";
+                            // 스크롤 이동
+                            autocompleteList.scrollTop = item.offsetTop - autocompleteList.offsetTop;
+                        } else {
+                            item.style.backgroundColor = "#1E1E1E";
+                            item.style.color = "#E0E0E0";
+                        }
+                    });
+                } else if (e.key === "Enter") {
+                    e.preventDefault(); // 기본 Enter 동작 막기
+
+                    if (currentAutocompleteIndex >= 0) {
+                        // 현재 선택된 항목이 있는 경우 추가
+                        const selectedItem = items[currentAutocompleteIndex];
+                        if (selectedItem) {
+                            addFilterTag(selectedItem.textContent);
+                            autocompleteList.style.display = "none"; // 추천 리스트 숨기기
+                            this.value = ""; // 검색창 초기화
+                            currentAutocompleteIndex = -1; // 인덱스 초기화
+                        }
+                    } else {
+                        // 선택된 항목이 없는 경우 (전체 텍스트로 추가 가능)
+                        const inputValue = this.value.trim();
+                        if (inputValue) {
+                            addFilterTag(inputValue);
+                            this.value = ""; // 검색창 초기화
+                        }
+                    }
+                } else if (e.key === "ArrowDown" || e.key === "ArrowUp") {
+                    // 화살표 키로도 이동 가능
+                    e.preventDefault();
+                    currentAutocompleteIndex += e.key === "ArrowDown" ? 1 : -1;
+                    if (currentAutocompleteIndex < 0) currentAutocompleteIndex = items.length - 1;
+                    if (currentAutocompleteIndex >= items.length) currentAutocompleteIndex = 0;
+
+                    // 스타일 업데이트
+                    items.forEach((item, index) => {
+                        if (index === currentAutocompleteIndex) {
+                            item.style.backgroundColor = "#BB86FC";
+                            item.style.color = "#121212";
+                        } else {
+                            item.style.backgroundColor = "#1E1E1E";
+                            item.style.color = "#E0E0E0";
+                        }
+                    });
+                }
+            }
+        });
+
+        // 포커스 아웃 시 추천 목록 초기화
+        document.getElementById("searchBox").addEventListener("blur", () => {
+            currentAutocompleteIndex = -1; // 선택 초기화
+        });
         // 포커스 아웃 시 드롭다운 숨기기
         document.getElementById("searchBox").addEventListener("blur", () => {
             setTimeout(() => {
@@ -465,15 +797,20 @@
                 }
             });
 
+            // ELO 기준 정렬 후 순위 부여
+            leaderboardData.sort((a, b) => b.elo - a.elo);
+            leaderboardData.forEach((player, index) => {
+                player.rank = index + 1; // 실제 순위 부여
+            });
+
             renderLeaderboard(leaderboardData);
         }
-
 
         function renderLeaderboard(data) {
             const tbody = document.querySelector("#leaderboard tbody");
             tbody.innerHTML = '';
 
-            data.sort((a, b) => b.elo - a.elo).forEach((player, index) => {
+            data.forEach(player => {
                 const row = document.createElement('tr');
 
                 // 행 클릭 이벤트 추가
@@ -482,8 +819,8 @@
                 });
 
                 // 티어에서 숫자를 제거한 이름 추출
-                const tierName = player.tier?.split(' ')[0] || 'Unranked'; // 숫자 제거 후 티어 이름만 추출
-                let tierClass = 'tier-unranked'; // 기본 클래스
+                const tierName = player.tier?.split(' ')[0] || 'Unranked';
+                let tierClass = 'tier-unranked';
 
                 // 티어에 따른 클래스 설정
                 switch (tierName) {
@@ -511,7 +848,7 @@
                 }
 
                 row.innerHTML = `
-            <td>${index + 1}</td>
+            <td>${player.rank}</td> <!-- 실제 순위 표시 -->
             <td><a href="user.html?nickname=${encodeURIComponent(player.nickname)}" style="color: #BB86FC; text-decoration: none;">${player.nickname}</a></td>
             <td>${(player.kills / Math.max(1, player.deaths)).toFixed(2)}</td>
             <td>${((player.wins / player.matches) * 100).toFixed(1)}%</td>
@@ -523,7 +860,6 @@
                 tbody.appendChild(row);
             });
         }
-
 
     </script>
 </body>
