--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
         tbody tr:hover {
             background-color: #3C3C3C;
         }
-        .tier-copper { color: #B87333; } .tier-bronze { color: #CD7F32; } .tier-silver { color: #C0C0C0; } .tier-gold { color: #FFD700; } .tier-platinum { color: #00BF
-            FF; } .tier-diamond { color: #8A2BE2; } .tier-champion { color: #DC143C; } .tier-unranked { color: #E0E0E0; }
+        .tier-copper { color: #B87333; } .tier-bronze { color: #CD7F32; } .tier-silver { color: #C0C0C0; } .tier-gold { color: #FFD700; } .tier-platinum { color: #00BFFF; } .tier-diamond { color: #8A2BE2; } .tier-champion { color: #DC143C; } .tier-unranked { color: #E0E0E0; }
         
         /* --- 검색 및 태그 스타일 (기존과 동일) --- */
         .search-container { position: relative; width: 100%; max-width: 400px; margin: 0 auto; }
